updated about me, added smooth scroll, fixed contact form going off screen

--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -36,6 +36,17 @@
     }
   }
 
+  // Contact form alignment
+  #contact-a .text-fields {
+    grid-template-areas: 
+      "name"
+      "email"
+      "subject"
+      "phone"
+      "message"
+      "message"
+  }
+
   // Stack Grid Columns
   #home-a .specials,
   #home-b .stats,
@@ -45,6 +56,8 @@
   .items {
     grid-template-columns: 1fr;
   }
+
+  
 
   #home {
     &-a {
