--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,6 +9,10 @@
   margin: 0;
 }
 
+html {
+	scroll-behavior: smooth;
+}
+
 body {
   font-family: "Dosis", sans-serif;
   line-height: 1.6;
